# NexusCrew

./: .gitignore  0.start.txt  1.prompts.txt  AGENTS.md  DESIGN.md  IMPLEMENTATION.md  OPENCLAW_CONVERGENCE_PROPOSAL.md  README.en.md  README.md  README.zh-CN.md  TELEGRAM_SETUP.md  crew.example.yaml  crew_memory.md  pyproject.toml  secrets.example.py
nexuscrew/: __main__.py  artifacts.py  cli.py  config.py  drill.py  github_sync.py  hooks.py  http_retry.py  local_secrets.py  metrics.py  orchestrator.py  registry.py  router.py  setup_wizard.py  task_state.py
nexuscrew/agents/: architect.py  base.py  dev.py  hr.py  pm.py  qa.py
nexuscrew/backends/: anthropic_backend.py  gemini_cli.py  openai_backend.py
nexuscrew/dashboard/: server.py
nexuscrew/git/: ci.py  (+4 more)
openspec/: AGENTS.md  README.md  project.md
research/: OPENCLAW_DEEP_DIVE.md
tests/: test_access_dashboard.py  test_approval.py  test_architect.py  test_backends.py  test_background_runner.py  test_chatops_service.py  test_checkpoints.py  test_cli.py  test_config.py  test_config_validation.py  test_crew_memory.py  test_dashboard_detail.py  test_dispatcher.py  test_drill.py  test_enterprise_store.py  test_git_workflow.py  test_hr_agent.py  test_hr_evaluation.py  test_laziness.py  test_metrics.py  test_metrics_store.py  test_next_stack.py  test_orchestrator_substance.py  test_pause_resume.py  test_pm_agent.py  test_pressure.py  test_qa_agent.py  test_recovery_webhooks.py  test_registry.py  test_router.py  test_runtime_events.py  test_setup_wizard.py  test_slack_surface.py  test_slack_sync.py  test_task_state.py
(+52 files in other folders)
