[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nexuscrew"
version = "0.1.0"
description = "Multi-agent AI dev team orchestrated via Telegram"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.28",  # extended thinking requires >=0.28
    "openai>=1.30",
    "python-telegram-bot>=21.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
nexuscrew = "nexuscrew.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexuscrew*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
